ny sti til bilelde

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ https://github.com/Team-Code/KA_Offline -->
 </head>
  <body>
 
-<img width="222" height="144" class="sd-res logo-normal" alt="Zochg.com" src="file:///C:/Users/Oscar2004/jar%20clikker/Drawing.png">
+<img width="222" height="144" class="sd-res logo-normal" alt="Zochg.com" src="Drawing.png">
 
 
 
