--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@ Chrome
 		image(infoImg,345,230,30,30);
 		image(infoImg,345,130,30,30);
 		image(infoImg,345,30,30,30);
+		text("V:0.1",15,480);
 	  }
 	 
 	 
