--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ Chrome
 	
 	if (Forjar === true) {
 	image(Fora,ForjarX,ForjarY,ForjarBredde,ForjarHoojde);
-	
+	text("Click anywhere to close",150,30);
 	
 	
 	}
@@ -452,7 +452,7 @@ Chrome
 	
 	if (Shopjar === true) {
 	image(Shopa,ShopjarX,ShopjarY,ShopjarBredde,ShopjarHoojde);
-	
+	text("Click anywhere to close",150,30);
 	
 	
 	
@@ -465,7 +465,7 @@ Chrome
 	
 	if (Newsjar === true) {
 	image(Newsa,NewsX,NewsY,NewsBredde,NewsHoojde);
-	
+	text("Click anywhere to close",150,30);
 	
 	
 	
@@ -479,7 +479,7 @@ Chrome
 	
 	if (Tvjar === true) {
 	image(Tva,TvjarX,TvjarY,TvBredde,TvHoojde);
-	
+	text("Click anywhere to close",150,30);
 	
 	
 	
