--- a/index.html
+++ b/index.html
@@ -335,8 +335,8 @@ function getCookie(varNavn) {
 	 /* @pjs preload="Shopjar.png"; */
 	var Shopa = loadImage("Shop_jar.png");
 	 
-	 /* @pjs preload="Jar2.png"; */
-	var creditAd = loadImage("creditAd.png");
+	 /* @pjs preload="Credits.png"; */
+	var creditAd = loadImage("Credits.png");
 	 
 	/* @pjs preload="Jar2.png"; */
 	var creditsignImg = loadImage("CreditSign.png");
