--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ var expires = new Date();
  expires = new Date(new Date().getTime() + parseInt(expires) * 1000 * 60 * 60 * 24);
 
 
-document.cookie = varNavn + "=" + value + ";path=/;expires=" + expires.toGMTString()+";domain=github.io";
+document.cookie = varNavn + "=" + value + ";path=/;expires=" + expires.toGMTString()+";domain=zochgcom.github.io";
 }
 
 function getCookie(varNavn) {
