--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 https://github.com/Team-Code/KA_Offline -->
 <html> 
  <head>
-    <title>Processing.JS inside Webpages: Template</title> 
+    <title>Jar Clicker</title> 
 </head>
  <body>
 
