--- a/index.html
+++ b/index.html
@@ -3,21 +3,96 @@
 https://github.com/Team-Code/KA_Offline -->
 <html> 
  <head>
-    <title>Jar Clicker</title> 
+    <title>Jar Clicker</title>
+	
+	<style> 
+	
+	#HeadlineJ {
+	
+	text-align: center;
+	font-family: cursive;
+	font-size: 40px;
+	color: white;
+	background-color: rgb(32,32,32);
+	width: 101%;
+	margin-left: -8px;
+	
+	}
+	
+	
+	.Zochg {
+	
+	text-align: center;
+	font-family: fantasy;
+	color: white;
+	border-style: solid;
+	border: rgb(25,25,25);
+	background-color: rgb(25,25,25);
+	width: 100%;
+	padding: 10px;
+	font-size: 60px;
+	margin-top: -8px;
+	margin-left: -8px;
+	z-index: 10;
+	
+	}  
+	
+	body {
+	
+	background-color: rgb(50, 50, 50);
+		
+		::-webkit-scrollbar {
+        display: none;
+	    }.
+		}
+		
+		.Copyright {
+		
+		position: fixed;
+		bottom: 0px;
+		left: 0%;
+		color: rgb(60, 60, 60);
+		z-index: 9;
+		font-size: 30px;
+		
+		}
+		
+		a:link {
+		
+		color: white;
+		
+		}
+		
+		a:hover { 
+                color: #F2F2F2;
+				}
+		
+	
+	
+	
+	</style>
 </head>
  <body>
 
-<img width="222" height="144" class="sd-res logo-normal" alt="Zochg.com" src="Drawing.png">
 
 
+ 
+ 
+<!-- <img width="222" height="144" class="sd-res logo-normal" alt="Zochg.com" src="Drawing.png"> -->
 
-<h2> Hi there welcome to --- JAR CLICKER --- it is a game like cookie clicker but not a cookie it's a jar you click on </h2>
+ <h1 class="Zochg" id="Link" ><a href="zochgcom.github.io/main"> Zochg </a></h1>
 
+ 
+ <br><br>
+
+
+<h2 id="HeadlineJ"> Jar-Clicker </h2>
 
     <p align="center"> 
 	<!--This draws the Canvas on the webpage -->
       <canvas id="mycanvas"></canvas> 
     </p>
+<p class="Copyright">© 2014 - 2016 Zochg inc. all rights reserved</p>
  </body>
  
  <!-- Run all the JavaScript stuff -->
