--- a/index.html
+++ b/index.html
@@ -381,8 +381,9 @@ background-color: #222222;
 <h2 id="un2"><a class="a-orange" href="http://zochgcom.github.io/zochg" title="Zochg Main Site">Zochg</a></h2>
 <p id="un"><a href="http://bit.ly/ZochgGames" class="a-orange" title="Home">Home</a> | <a href="http://zochgcom.github.io/zochg/log.html" class="a-orange" title="Log">Log</a> | <a href="http://zochgcom.github.io/egar" class="a-orange" title="Evolution Cell">Evolution Cell</a> | <a href="http://zochgcom.github.io/zochg/contact.html" class="a-orange" title="Contact Us">Contact Us</a></p>
 
-
 </div>
+
+<div style="height: 100px; width: 100%">a</div>
 
     <p align="center"> 
 	<!--This draws the Canvas on the webpage -->
