--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ var expires = new Date();
  expires = new Date(new Date().getTime() + parseInt(expires) * 1000 * 60 * 60 * 24);
 
 
-document.cookie = varNavn + "=" + value + ";path=/;expires=" + expires.toGMTString()+";domain=zochgcom.github.io";
+document.cookie = varNavn + "=" + value + "; path=/;expires= Thu, 18 Dec 2033 12:00:00 UTC; domain=zochgcom.github.io";
 }
 
 function getCookie(varNavn) {
