--- a/index.html
+++ b/index.html
@@ -442,7 +442,8 @@ function getCookie(varNavn) {
         frameRate(30);
 		
 		
-		
+		//Version variable
+	     var vers = 1,5;
 		
 		//?Jars
 		var NewsX = 40;
@@ -953,7 +954,7 @@ function getCookie(varNavn) {
 	
 	
 	}
-	text("V:0.8",15,490);
+	text(vers,15,490);
 	
 	  }
 	  
