--- a/index.html
+++ b/index.html
@@ -404,6 +404,9 @@ Chrome
 
 
  -->
+
+<script type="text/javascript" id="cookieinfo" src="js/cookieinfo.min.js" data-bg="#645862" data-fg="#FFFFFF" data-link="#F1D600" data-cookie="CookieInfoScript" data-text-align="left" data-close-text="Got it!">
+</script>
  
  <script>
  
