--- a/index.html
+++ b/index.html
@@ -405,8 +405,16 @@ Chrome
 
  -->
 
-<script type="text/javascript" id="cookieinfo" src="//cookieinfoscript.com/js/cookieinfo.min.js" data-bg="#645862" data-fg="#FFFFFF" data-link="#F1D600" data-cookie="CookieInfoScript" data-text-align="left" data-close-text="Got it!">
+<script type="text/javascript" id="cookieinfo"
+	src="//cookieinfoscript.com/js/cookieinfo.min.js"
+	data-bg="#645862"
+	data-fg="#FFFFFF"
+	data-link="#F1D600"
+	data-cookie="CookieInfoScript"
+	data-text-align="left"
+       data-close-text="Got it!">
 </script>
+
  
  <script>
  
@@ -446,7 +454,7 @@ function getCookie(varNavn) {
 		
 		
 		//Version variable
-	     var vers = 1,5;
+	     var vers = "1.5";
 		
 		//?Jars
 		var NewsX = 40;
