--- a/index.html
+++ b/index.html
@@ -624,6 +624,16 @@ function getCookie(varNavn) {
 	 shoppris = "ERR 404 variable 'price' not found!";
 	 
 	 }
+		 
+	 if (mouseX > 495 && mouseY < 5 && shopON === true && creditOpen === true) {
+	 //edit to normalness
+	 avisNumber === 0;
+	 money === 0;
+	 skovNumber === 0;
+	 butikNumber === 0;
+	 tvNumber === 0;
+	 shopNumber === 0;
+	 } 
 	 
 	 if (mouseX > x - 25 && mouseX < x - 25 + jarSizeX && mouseY > y && mouseY < y + jarSizeY ) {
 	  money += 1 + (1 * skovNumber ) + (4 * butikNumber) ;
