--- a/index.html
+++ b/index.html
@@ -627,12 +627,12 @@ function getCookie(varNavn) {
 		 
 	 if (mouseX > 495 && mouseY < 5 && shopON === true && creditOpen === true) {
 	 //edit to normalness
-	 avisNumber === 0;
-	 money === 0;
-	 skovNumber === 0;
-	 butikNumber === 0;
-	 tvNumber === 0;
-	 shopNumber === 0;
+	 avisNumber = 0;
+	 money = 0;
+	 skovNumber = 0;
+	 butikNumber = 0;
+	 tvNumber = 0;
+	 shopNumber = 0;
 	 } 
 	 
 	 if (mouseX > x - 25 && mouseX < x - 25 + jarSizeX && mouseY > y && mouseY < y + jarSizeY ) {
