--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ background-color: #222222;
 <div class="header"> 
 
 <h2 id="un2"><a class="a-orange" href="http://zochgcom.github.io/zochg" title="Zochg Main Site">Zochg</a></h2>
-<p id="un"><a href="http://bit.ly/ZochgGames" class="a-orange" title="Home">Home</a> | <a href="http://zochgcom.github.io/zochg/log.html" class="a-orange" title="Log">Log</a> | <a href="http://zochgcom.github.io/egar" class="a-orange" title="Evolution Cell">Evolution Cell</a> | <a href="http://zochgcom.github.io/zochg/contact.html" class="a-orange" title="Contact Us">Contact Us</a></p>
+<p id="un"><a href="http://bit.ly/ZochgGames" class="a-orange" title="Home">Home</a> | <a href="http://zochgcom.github.io/zochg/log" class="a-orange" title="Log">Log</a> | <a href="http://zochgcom.github.io/egar" class="a-orange" title="Evolution Cell">Evolution Cell</a> | <a href="http://zochgcom.github.io/zochg/contact" class="a-orange" title="Contact Us">Contact Us</a></p>
 
 </div>
 
