--- a/index.html
+++ b/index.html
@@ -406,6 +406,16 @@ Chrome
 
  -->
  
+<script type="text/javascript" id="cookieinfo"
+    src="//cookieinfoscript.com/js/cookieinfo.min.js"
+    data-bg="#645862"
+    data-fg="#FFFFFF"
+    data-link="#F1D600"
+    data-cookie="acceptCookies"
+    data-text-align="left"
+       data-close-text="I accept Cookies!">
+</script>
+
  <script>
  
 function setCookie(varNavn, value) {
@@ -418,7 +428,7 @@ var expires = new Date();
  expires = new Date(new Date().getTime() + parseInt(expires) * 1000 * 60 * 60 * 24);
 
 
-document.cookie = varNavn + "=" + value + ";path=/; expires=Thu, 18 Dec 2033 12:00:00 UTC; domain=zochgcom.github.io";
+document.cookie = varNavn + "=" + value + ";path=/; expires=Thu, 18 Dec 2033 12:00:00 UTC; domain=zochgcom.github.io/jar-clicker/";
 }
 
 function getCookie(varNavn) {
