--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@ function getCookie(varNavn) {
     butikNumber =  parseInt( getCookie("butikNumber"));
     avisNumber =  parseInt( getCookie("avisNumber"));
     tvNumber =  parseInt( getCookie("tvNumber"));
-    seconds =  parseInt( getCookie("seconds"));
+    //seconds =  parseInt( getCookie("seconds"));
 	
 	
 
@@ -856,11 +856,11 @@ function getCookie(varNavn) {
 	  setCookie("butikNumber", butikNumber);
 	  setCookie("avisNumber", avisNumber);
 	  setCookie("tvNumber", tvNumber);
-	  setCookie("seconds", seconds);
-	  setCookie("butikpris", butikpris);
-	  setCookie("skovpris", skovpris);
-	  setCookie("avispris", avispris);
-	  setCookie("tvpris", tvpris);
+	  //setCookie("seconds", seconds);
+	  //setCookie("butikpris", butikpris);
+	  //setCookie("skovpris", skovpris);
+	  //setCookie("avispris", avispris);
+	  //setCookie("tvpris", tvpris);
 	  
 	  if (SatanConfirmed === true) {
 	  seconds = 666;
