--- a/index.html
+++ b/index.html
@@ -405,7 +405,6 @@ Chrome
 
 
  -->
- <!--
 <script type="text/javascript" id="cookieinfo"
     src="//cookieinfoscript.com/js/cookieinfo.min.js"
     data-bg="#645862"
@@ -414,7 +413,7 @@ Chrome
     data-cookie="acceptCookies"
     data-text-align="left"
        data-close-text="I accept Cookies!">
-</script> -->
+</script>
 
  <script>
  
