--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@ function getCookie(varNavn) {
 	 var BarFilled = false;
 	 
 	 //Version Variable
-	 var vers = 1.5;
+	 var vers = "1.5.1";
 	
     skovNumber =  parseInt( getCookie("skovNumber"));
     butikNumber =  parseInt( getCookie("butikNumber"));
