--- a/index.html
+++ b/index.html
@@ -665,12 +665,17 @@ function getCookie(varNavn) {
 	 
 	 if (mouseX > 495 && mouseY < 5 && shopON === true && creditOpen === true) {
 	 //Remove Madness
-	 avisNumber = 0;
-	 money = 0;
-	 skovNumber = 0;
-	 butikNumber = 0;
-	 tvNumber = 0;
-	 shopNumber = 0;
+	avisNumber = 0;
+	money = 0;
+	skovNumber = 0;
+	butikNumber = 0;
+	tvNumber = 0;
+	shopNumber = 0;
+	avispris = 0;
+	skovpris = 0;
+	butikpris = 0;
+	tvpris = 0;
+	shoppris = 0;
 	 }
 	 
 	 if (mouseX > x - 25 && mouseX < x - 25 + jarSizeX && mouseY > y && mouseY < y + jarSizeY ) {
