--- a/index.html
+++ b/index.html
@@ -675,6 +675,7 @@ function getCookie(varNavn) {
 		butikpris = 100;
 		avispris = 350;
 		tvpris = 10000;
+		TimesClicked = 0;
 	 }
 	 
 	 if (mouseX > x - 25 && mouseX < x - 25 + jarSizeX && mouseY > y && mouseY < y + jarSizeY ) {
