--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@ function getCookie(varNavn) {
 	  barYPos = 420;
 	  BarFilled = false;
 	  money += money;
-	  times++;
+	  times += 0.5;
 	  }
 	  };
 	  
